# Aii-repo

./: .gitignore  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW02/figures/: .gitkeep
homeworks/HW03/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW03/eda-cli/data/: example.csv
homeworks/HW03/eda-cli/reports/: .gitkeep
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: __init__.py  api.py  cli.py  core.py  viz.py
homeworks/HW04/eda-cli/tests/: test_api.py  test_core.py
homeworks/HW05/: HW05.ipynb
homeworks/HW05/figures/: .gitkeep
homeworks/HW06/: .gitkeep
project/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pytest.ini  report.md  requirements.txt  self-checklist.md
project/artifacts/: .gitkeep  README.md
project/artifacts/models/baseline/: .gitkeep
project/artifacts/models/transformer/: .gitkeep
project/configs/: README.md  model_config.yaml  training_config.yaml
project/data/: README.md  sentiment_data.csv
project/data/sample/: .gitkeep
project/notebooks/: 01_eda.ipynb  02_model_experiments.ipynb  README.md
project/src/: README.md  __init__.py
project/src/data/: __init__.py  loader.py  preprocessor.py
project/src/models/: __init__.py  baseline.py  transformer.py
project/src/service/: __init__.py  app.py
project/src/training/: __init__.py  train.py
project/src/utils/: __init__.py  config.py  logging_config.py
project/tests/: README.md  __init__.py  conftest.py  test_api.py  test_models.py  test_preprocessor.py
